# R2M2

./: .gitignore  Cargo.toml  flake.nix
src/: app.rs  main.rs  mods.rs  rw_mod.rs
src/app/: messages.rs  widgets.rs
src/app/widgets/: form.rs  popup_manager.rs  status_line.rs
src/app/widgets/form/: input_box.rs
src/mods/: app_mod.rs  game.rs  tag.rs
