[package]
name = "r2m2"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
ron = "0.10"
ratatui = { version = "0.29.0", features = ["serde"] }
tui-input = "0.12.1"
crossterm = "0.29.0"
color-eyre = "0.6.5"
quick-xml = { version = "0.37.5", features = ["serialize"] }

